  firstOfMonth = today.withDayOfMonth(1);
  These methods are the immutable equivalent of set methods.
  These are convenince methods for the methods on the property API.

- DateTimeFormatter/DateTimeParserBucket
  If a parsed datetime is illegal due to field range or time zone offset
  transition, thrown exception includes text of datetime being parsed.


Compatibility with 1.2
----------------------
Binary compatible - Yes

Source compatible - Yes
  - v1.2 and v1.3 are source compatible in their public and protected API

Serialization compatible - Yes

Data compatible - Yes
  - DateTimeZone data updated to version 2006d


Deprecations since 1.2
----------------------
- Instant.toDateTimeISO
- Instant.toMutableDateTimeISO
    These were identical to the methods without the ISO suffix


Bug fixes since 1.2
-------------------
- DateTime/DateMidnight/MutableDateTime/AbstractInstant
   Conversion methods toDateTime, toDateTimeISO, toMutableDateTime, and
    toMutableDateTimeISO now preserve the time zone.
    Previously calling any of these four methods would convert the result to
    the default time zone. This was incorrect.
    The methods have been changed to preserve the time zone.
   The similarly named methods on Instant have not changed behaviour.

- Interval/MutableInterval.overlaps(ReadableInterval)
  Previously, this method didn't handle empty intervals correctly
  Now, an empty interval at the start of a larger interval does overlap

- DateTimeFormatterBuilder.MatchingParser
  Previously didn't estimate parsed length correctly

- YearMonthDay/TimeOfDay/Partial.Property
  Hashcode was not defined

- FixedDateTimeZone
  Hashcode was not defined

- ISO/Gregorian/Julian/Coptic/EthiopicChronology
  Fixed overflow when getting year field from instants at Long.MAX_VALUE and
  LONG.MIN_VALUE.


Feedback
--------
All feedback is welcomed at joda-interest@lists.sourceforge.net.

The Joda team